# gtkmm_alexa

./: .cproject  .project  CMakeLists.txt  README.md
cmake/: FindGTKMM.cmake
data/: CMakeLists.txt  gresource.xml.in
data/alexa/: main.bundle.js
data/ui/: window.glade  window.ui
src/: CMakeLists.txt  alexaclient.cpp  alexaclient.h  application.cpp  cmake_install.cmake  gtkwebview.cpp  gtkwebview.h  main.cpp  preferences.cpp  window.cpp  window.h
